[project]
name = "RoBERTa_API"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.110.3",
    "uvicorn>=0.29.0",
    "transformers>=4.40.1",
    "torch>=2.3.0",
    "streamlit>=1.34.0",
    "requests>=2.31.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
